5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1758_1583.log
== TEST (2019-05-28 11:54:56) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if lend(a)>3
	i+=3
	b = b + a[i]+'.'
-- ERROR:
File "XXXX", line 6
    if lend(a)>3
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:55:16) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if lend(a)>3:
		i+=3
		b = b + a[i]+'.'
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if lend(a)>3:
NameError: name 'lend' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:55:32) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		i+=3
		b = b + a[i]+'.'
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if lend(a)>3:
NameError: name 'lend' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:13:12) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		i+=3
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if lend(a)>3:
NameError: name 'lend' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:21:36) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		b += a[i:i+4] + '.'
	i +=4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if lend(a)>3:
NameError: name 'lend' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:21:51) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		b += a[i:i+4] + '.'
	i +=4
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if lend(a)>3:
NameError: name 'lend' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:22:17) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		b += a[i:i+3] + '.'
	i +=4
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if lend(a)>3:
NameError: name 'lend' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:22:57) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		b += a[i:i+4] + '.'
	i +=3
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if lend(a)>3:
NameError: name 'lend' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:23:08) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		b += a[i:i+3] + '.'
	i +=3
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if lend(a)>3:
NameError: name 'lend' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:23:33) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		b += a[i:i+3] + '.'
	i +=3
print(b[0:-1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if lend(a)>3:
NameError: name 'lend' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:23:40) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		b += a[i:i+3] + '.'
	i +=3
print(b[0:-1])
-- EXECUTION TIME:
0.131129
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:24:15) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		b += a[i:i+3] + '.'
	i +=3
print(b[0:-1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if lend(a)>3:
NameError: name 'lend' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:24:47) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		b += a[i:i+3] + '.'
	i +=3
	else:
		print(a)
print(b[0:-1])
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:25:18) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		b += a[i:i+3] + '.'
	else:
		print(a)
	i +=3
print(b[0:-1])
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:25:31) 
-- CODE:
a = str(input('fala meu bom: '))
b = ''
i = 0
j = 0
while i < len(a):
	if len(a)>3:
		b += a[i:i+3] + '.'
	else:
		print(a)
	i +=3
print(b[0:-1])
-- EXECUTION TIME:
0.191939
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
